<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Att.end</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closeButton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailId">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="logout">LogOut</string>
    <string name="welcome">You have successfully logged in..</string>
    <string name="drawer_header">Drawer Header</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="teacher">teacher</string>
    <string name="student">Student</string>

    <string-array name="stream">
        <item>BS</item>
        <item>BA</item>
        <item>BC</item>
        <item>BCA</item>
    </string-array>

    <string-array name="batch">
        <item>17</item>
        <item>18</item>
        <item>19</item>
    </string-array>

    <string name="Attendance_History">Attendance History</string>
    <string name="Take_Attendance">Take Attendance</string>
    <string name="View_ClassTime">Class Timings</string>
    <string name="Set_ClassTime">Set Timings</string>
    <string name="Students">Students</string>

    <string name="AHistory">Check Your Attendace sheet</string>
    <string name="CTiming">Check Upcoming Class Timings</string>
    <string name="TAttendance">Take Attendance for current class</string>
    <string name="STiming">Set Timings for upcoming class</string>
    <string name="SProfile">View Student Profiles</string>


    <string name="title_1">Cool card</string>
    <string name="title_2">Ok card</string>
    <string name="title_3">Bad card</string>
    <string name="title_4">Ugly card</string>

    <string name="text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.  Etiam eget ligula eu lectus lobortis condimentum.</string>

    <string name="facebook_app_id">186600419114348</string>
    <string name="fb_login_protocol_scheme">fb186600419114348</string>

</resources>
